<resources>
    <string name="app_name">CryptoMind</string>
    <string name="score_format">%d</string>
    <string name="enkripsi">Enkripsi</string>
    <string name="dekripsi">Dekripsi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pendahuluan">Pendahuluan</string>
    <string name="materi_algoritma_cipher_feedback">Teori Algoritma Cipher Feedback</string>
    <string name="intro">\tKeamanan informasi semakin penting di era digital ini, di mana pesan-pesan rahasia rentan terhadap akses yang tidak sah.</string>
    <string name="intro2">\tSalah satu algoritma dalam kriptografi adalah Chiper Feedback. Mari kita telusuri lebih dalam tentang algoritma ini dan bagaimana ia dapat mengamankan pesan kita.</string>
    <string name="cfb_title">Apa itu Chiper Feedback?</string>
    <string name="cfb_materi">Cipher Feedback (CFB) adalah salah satu mode operasi Cipher Block yang digunakan untuk mengenkripsi data dalam unit-unit yang lebih kecil daripada ukuran blok kunci.</string>
    <string name="cfb_title_poin">Di bawah ini adalah beberapa poin dari algoritma Cipher Feedback :</string>
    <string name="cfb_poin1">Data dienkripsi dalam unit yang lebih kecil daripada ukuran blok.</string>
    <string name="cfb_poin2">Unit data yang dienkripsi panjangnya bisa 1 bit, 2 bit, 4-bit, 8 bit dan lain-lain. CFB dapat mengenkripsi data dengan panjang berapapun selama tidak melebihi panjang blok kunci.</string>
    <string name="cfb_poin3">Dalam sistem ASCII (American Standard Code for Information Interchange), setiap huruf direpresentasikan menggunakan 8 bit.</string>
    <string name="cfb_poin4"><![CDATA[CFB r-bit mengenkripsi plainteks sebanyak r bit setiap kalinya, r <= n(n = ukuran blok).]]></string>
    <string name="cfb_poin5">Dengan kata lain, CFB r-bit meperlakukan cipher blok sama seperti pada cipher alir.</string>
    <string name="cfb_poin6">Mode CFB membutuhkan sebuah antrian (queue) yang berukuran sama dengan ukuran blok masukan.</string>
    <string name="cfb_poin7">Antrian pertama diisi dengan initialization vector (IV)</string>
    <string name="enkripsi_title">Enkripsi dengan CFB</string>
    <string name="enkripsi_ket_gambar">Perhatikan proses enkripsi mode CFB 8-bit yang bekerja pada blok berukuran 64-bit (setara dengan 8 byte) pada gambar berikut</string>
    <string name="enkripsi_materi">\tProses enkripsi dengan CFB dimulai dengan membagi pesan asli menjadi blok-blok yang lebih kecil. Setiap blok pesan akan di-encrypt dengan menggunakan blok sebelumnya sebagai input. Inilah yang membuat CFB menjadi unik, karena blok sebelumnya di-feedback ke proses enkripsi. Hasil output dari enkripsi kemudian akan di-XOR (eksklusif OR) dengan blok pesan berikutnya. Proses ini diulang hingga seluruh pesan terenkripsi.</string>
    <string name="enkripsi_rumus">Ci = Pi ⊕ MSBr(EK (Xi)) \nXi+1 = LSBn – r(Xi) || Ci</string>
    <string name="enkripsi_ket_rumus">\tSecara matematis, proses enkripsi CFB r-bit dapat dinyatakan sebagai :</string>
    <string name="keterangan_rumus">Keterangan : \n\t\t\ti = 1, 2, 3, …, m. \n\t\t\tXi = isi antrian dengan X1 adalah IV \n\t\t\tE = fungsi enkripsi \n\t\t\tK = kunci \n\t\t\tn = panjang blok enkripsi \n\t\t\tr = panjang unit enkripsi \n\t\t\t|| = operator penyambungan (concatenation)</string>
    <string name="dekripsi_title">Deskripsi dengan CFB</string>
    <string name="dekripsi_ket_gambar">Berikut adalah gambaran proses dekripsi mode CFB 8-bit yang bekerja pada blok berukuran 64-bit (setara dengan 8 byte)</string>
    <string name="dekripsi_materi">\tUntuk proses deskripsi, CFB melakukan hal yang mirip dengan enkripsi. Blok pesan terenkripsi di-decrypt dengan menggunakan blok sebelumnya sebagai input, dan hasil output kemudian di-XOR dengan blok pesan berikutnya. Dengan menggunakan kunci yang sama, CFB dapat dengan mudah mengembalikan pesan ke bentuk aslinya.</string>
    <string name="dekripsi_ket_rumus">\tSecara matematis, proses dekripsi CFB r-bit dapat dinyatakan sebagai :</string>
    <string name="dekripsi_rumus">Pi = Ci ⊕ MSBr(EK (Xi)) \nXi+1 = LSBn – r(Xi) || Ci</string>
    <string name="keamanan_title">Keamanan CFB</string>
    <string name="keamanan_materi1">\tPada proses enkripsi, kesalahan 1-bit akan merambat pada blok cipherteks yang bersangkutan dan blok-blok ciphertext selanjutnya.</string>
    <string name="keamanan_materi2">\tSedangkan pada proses dekripsi, kesalahan 1-bit hanya berpengaruh pada blok yang bersangkutan dan satu blok setelahnya</string>
    <string name="enkripsi_langkah_title">Langkah Enkripsi CFB</string>
    <string name="enkripsi_langkah_ket">Dibawah ini merupakan langkah-langkah proses enkripsi cfb r-bit :</string>
    <string name="enkripsi_langkah">- Isi antrian pertama (X1) dengan Initialization Vector (IV) sebanyak n-blok.\n- Enkripsi antrian menggunakan kunci (k).\n- hasil enkripsi tersebut diambil blok yang paling kiri lalu di xor-kan dengan Plaintext (Pi) sebanyak r-bit dan akan menghasilkan Ciphertext (Ci) sebanyak r-bit pula.\n- Salinan Ci disimpan pada blok paling kanan antrian.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="home_text_title">Belajar Kriptografi Di</string>
    <string name="daftar_menu">Daftar Menu</string>
    <string name="materi">Materi</string>
    <string name="simulasi">Simulasi</string>
    <string name="kuis">Kuis</string>
    <string name="program">Program</string>
    <string name="copyright">© 2024 Amar Al Fatah</string>
    <string name="petunjuk">Petunjuk</string>
    <string name="info">Info</string>
    <string name="latihan_enkripsi">Latihan Enkripsi</string>
    <string name="latihan_dekripsi">Latihan Dekripsi</string>
    <string name="enkripsi_dan_dekripsi">Enkripsi Dan Dekripsi</string>
    <string name="latihan">Latihan</string>
    <string name="pilih_mode_simulasi">Pilih mode simulasi :</string>
    <string name="algoritma_cipher_feedback">Algoritma Cipher Feedback</string>
    <string name="belajar_simulasi">Belajar Simulasi</string>
    <string name="_2_bit">2 Bit</string>
    <string name="_4_bit">4 Bit</string>
    <string name="_8_bit">8 Bit</string>
    <string name="isi_antrian_pertama_x1_dengan_initialization_vector_iv_sebanyak_n_blok">Isi antrian pertama (X1) dengan Initialization Vector (IV) sebanyak n-blok.</string>
    <string name="enkripsi_antrian_menggunakan_kunci_k">Enkripsi antrian menggunakan kunci (k).</string>
    <string name="ambil_blok_paling_kiri_dari_hasil_enkripsi_lalu_xor_kan_dengan_plaintext_pi_sebanyak_r_bit_ini_akan_menghasilkan_ciphertext_ci_sebanyak_r_bit_pula">Ambil blok paling kiri dari hasil enkripsi (MSB) , lalu XOR-kan dengan plaintext (Pi) sebanyak r-bit. Ini akan menghasilkan Ciphertext (Ci) sebanyak r-bit pula.</string>
    <string name="simpan_salinan_ci_pada_blok_paling_kanan_dari_antrian">Simpan salinan Ci pada blok paling kanan dari antrian.</string>
    <string name="ulangi_langkah_langkah_di_atas_sampai_semua_plaintext_telah_terenkripsi_atau_mencapai_pn">Ulangi langkah-langkah di atas sampai semua plaintext telah terenkripsi atau mencapai Pn.</string>
    <string name="langkah_dekripsi_cfb">Langkah Dekripsi CFB</string>
    <string name="dibawah_ini_merupakan_langkah_langkah_proses_dekripsi_cfb_r_bit">Dibawah ini merupakan langkah-langkah proses dekripsi cfb r-bit :</string>
    <string name="isi_antrian_pertama_x1_dengan_initialization_vector_iv_sebanyak_n_blok_dekripsi">Isi antrian pertama (X1) dengan Initialization Vector (IV) sebanyak n-blok.</string>
    <string name="enkripsi_antrian_menggunakan_kunci_k_dekripsi">Enkripsi antrian menggunakan kunci (k).</string>
    <string name="ambil_blok_paling_kiri_dari_hasil_enkripsi_lalu_xor_kan_dengan_ciphertext_ci_sebanyak_r_bit_ini_akan_menghasilkan_plaintext_pi_sebanyak_r_bit_pula_dekripsi">Ambil blok paling kiri dari hasil enkripsi , lalu XOR-kan dengan Ciphertext (Ci) sebanyak r-bit. Ini akan menghasilkan Plaintext (Pi) sebanyak r-bit pula.</string>
    <string name="ci_kemudian_digunakan_kembali_untuk_disimpan_pada_blok_paling_kanan_dari_antrian">Ci kemudian digunakan kembali untuk disimpan pada blok paling kanan dari antrian.</string>
    <string name="ulangi_langkah_langkah_di_atas_sampai_semua_plaintext_telah_terenkripsi_atau_mencapai_cn">Ulangi langkah-langkah di atas sampai semua plaintext telah terenkripsi atau mencapai Cn.</string>
    <string name="mari_belajar">Mari Belajar</string>
    <string name="time">00:00</string>
    <string name="soal_number">Soal 1</string>
    <string name="question">Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="go_to_home">Kembali Ke Home</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="text_yang_akan_didekripsi">Text yang akan didekripsi</string>
    <string name="cipher_text">Cipher Text</string>
    <string name="key">Key</string>
    <string name="text_yang_akan_dienkripsi">Text yang akan dienkripsi</string>
    <string name="plain_text">Plain Text</string>
    <string name="initial_vector_iv">Initial Vector (IV)</string>
    <string name="text_yang_telah_dienkripsi">Text yang telah dienkripsi</string>
    <string name="info_materi"><b>Materi</b> : Materi disusun secara terstruktur dan mudah dipahami, serta dilengkapi latihan soal yang dikemas dengan cara yang menarik.</string>
    <string name="info_simulasi"><b>Simulasi</b> : Memungkinkan Anda untuk melihat secara langsung bagaimana algoritma CFB bekerja secara step by step.</string>
    <string name="info_kuis"><b>Kuis</b> : Kuis ini dapat Anda gunakan sebagai tolok ukur pemahaman Anda terhadap materi yang telah dipelajari.</string>
    <string name="info_program"><b>Program</b> : Menu ini memungkinkan Anda untuk melakukan enkripsi dan dekripsi pesan dengan mode CFB.</string>
    <string name="info_cryptomind">Tentang CryptoMind</string>
    <string name="info_cryptomind_is">CryptoMind adalah aplikasi pembelajaran algoritma cipher feedback (CFB) berbasis mobile yang dirancang untuk membantu Anda memahami dan menguasai algoritma ini dengan cara yang mudah dan interaktif.</string>
    <string name="info_cfb_is">Algoritma CFB adalah salah satu metode enkripsi dalam cipher block yang digunakan untuk mengamankan pesan. Algoritma ini bekerja dengan cara menggunakan kembali hasil enkripsi sebelumnya untuk menghasilkan blok hasil enkripsi selanjutnya. CFB dikenal dengan kesederhanaan implementasinya dalam melindungi pesan.</string>
    <string name="info_intro_menu">CryptoMind menawarkan berbagai fitur yang menjadikannya pilihan ideal untuk mempelajari algoritma CFB :</string>
    <string name="info_dev">CryptoMind dikembangkan oleh Amar Al Fatah, seorang programmer yang bersemangat tentang algoritma kriptografi dan ingin membantu orang lain belajar tentang CFB dengan cara yang menyenangkan dan efektif. Commit pertama di GitHub dilakukan pada tanggal 15 Maret 2024, menandakan awal perjalanan CryptoMind dalam membantu para pembelajar.</string>
    <string name="info_tujuan">Misi kami adalah menjadikan CryptoMind sebagai sumber daya utama bagi siapa saja yang ingin mempelajari algoritma CFB. Kami ingin membantu Anda memahami konsep-konsep kompleks dengan cara yang mudah dipahami dan memberikan Anda alat yang diperlukan untuk menguasai CFB dengan percaya diri.</string>
    <string name="info_thanks">Kami ingin mengucapkan terima kasih kepada semua orang yang telah berkontribusi pada pengembangan CryptoMind. Kami harap Anda menikmati aplikasi ini dan menemukan manfaatnya dalam perjalanan belajar Anda.</string>
</resources>