<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.panduan.PanduanActivity"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="42dp"
            android:text="@string/info_cryptomind"
            android:textSize="30sp"
            android:fontFamily="@font/inter_bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/info_cryptomind_is"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_cfb_is"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_intro_menu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_materi"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_simulasi"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_kuis"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_program"/>

        <TextView
            android:id="@+id/tvDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_dev"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_tujuan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp"
            android:text="@string/info_thanks"/>

    </LinearLayout>

</ScrollView>
