<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewUnencryptedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/text_yang_akan_dienkripsi"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPlaintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:hint="@string/plain_text"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPlaintext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:hint="@string/key"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"/>

        <TextView
            android:id="@+id/errorKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            android:text="Key harus lebih pendek dari Plaintext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutIV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/initial_vector_iv"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"/>

        <TextView
            android:id="@+id/errorIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            android:text="IV harus lebih pendek dari Plaintext dan harus sama dengan Key"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enkripsi"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewEncryptedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/text_yang_telah_dienkripsi"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEncrypted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_copy"
        app:endIconContentDescription="Copy Text"
        android:hint="@string/cipher_text"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEncrypted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="top|start"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>





</LinearLayout>
