<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewUnencryptedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/text_yang_akan_didekripsi"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyCipherText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/white"
            android:hint="@string/plain_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiCipherText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/white"
            android:hint="@string/key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace" />

            <TextView
                android:id="@+id/errorKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Key harus lebih pendek dari Plaintext"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/initial_vector_iv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextIV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace" />

            <TextView
                android:id="@+id/errorIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IV harus lebih pendek dari Plaintext dan harus sama dengan Key"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:text="@string/simulasi"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>