<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvUndencryptedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/text_yang_akan_didekripsi"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCipherText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:hint="@string/cipher_text"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCipher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:hint="@string/key"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"/>

        <TextView
            android:id="@+id/errorKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            android:text="Kunci harus terdiri dari 8 karakter dan dalam format biner"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dekripsi"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDecryptedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Text yang telah didekripsi"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyDecrypted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_copy"
        app:endIconContentDescription="Copy Text"
        android:hint="Plain Text"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="top|start"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>






</LinearLayout>
